# target_info_library

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql-analysis.yml
include/: AArch32LinuxTypeBuilder.cpp  Actions.h  CallWithLayoutAndCode.h  Signature.h  Struct.h  TargetInfo.h  TypeBuilder.h  Types.h
lib/: AArch32Linux.cpp  AArch32Linux.h  AArch32LinuxTypeBuilder.cpp  AArch32LinuxTypeBuilder.h  AArch64Linux.cpp  AArch64Linux.h  AArch64LinuxTypeBuilder.cpp  AArch64LinuxTypeBuilder.h  AArchLinuxStructBuilder.cpp  AArchLinuxStructBuilder.h  CMakeLists.txt  CallWithLayoutAndCode.cpp  TypeBuilder.cpp  X64LinuxTypeBuilder.h  X8664Linux.cpp  X8664Linux.h  X86LinuxTypeBuilder.cpp  X86LinuxTypeBuilder.h  library.cpp
lib/riscv/: CMakeLists.txt  RiscvTypeBuilder.cpp  RiscvTypeBuilder.h  riscv32.h  riscv32linux.cpp  riscv64.h  riscv64linux.cpp
